--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Shared/CMS_Layout.cshtml
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
 
+    <!-- Site Icons -->
+    <link rel="shortcut icon" href="~/images/fac.ico" type="image/x-icon" />
+
     <link rel="stylesheet" href="~/css/bootstrap.css">
     <link rel="stylesheet" href="~/css/index.css">
     <link href="~/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
