--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/CMSHome/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/CMSHome/Login.cshtml
@@ -10,6 +10,9 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    <!-- Site Icons -->
+    <link rel="shortcut icon" href="~/images/fac.ico" type="image/x-icon" />
+
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="/css/index.css">
     <link rel="stylesheet" href="/css/login.css">
