--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Return/Return.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Return/Return.cshtml
@@ -82,7 +82,46 @@
 
 <div class="middle-content">
 
-    <h2 class="mt-3">退換貨管理</h2>
+    <div class="row  align-items-center">
+        <div class="col-6">
+            <h2 class="mt-3">退換貨管理</h2>
+        </div>
+        <div class="col-6 text-end mt-3">
+            <button class="create_btn" id="createReason" data-bs-toggle="modal" href="#editStatusModalToggle" role="button">新增原因</button>
+        </div>
+    </div>
+
+    <!---新增退換貨狀態 modal-->
+    <div class="modal fade" id="editStatusModalToggle" aria-hidden="true" aria-labelledby="exampleModalToggleLabel" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalToggleLabel">新增會員</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                            aria-label="Close"></button>
+                </div>
+
+                <div class="modal-body">
+                    <table class="table table-bordered border-danger">
+                        <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">原因名稱</th>
+                            </tr>
+                        </thead>
+                        <tbody id="appendReason">
+                            </tbody>
+                    </table>
+
+                    <button id="CreatReturnReason" class="btn btn-danger btn-block" style="width: 100%;">
+                        儲存
+                    </button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!---新增退換貨狀態 modal-->
 
     <div class="search-row row mt-3">
 @*         <div class="row align-items-center mb-3">
@@ -131,7 +170,7 @@
                             <th>訂單ID</th>
                             <th>會員ID</th>
                             <th>會員姓名</th>
-                            <th>退換貨日期</th>
+                            <th>申請日期</th>
                             <th>退換貨原因</th>
                             <th>狀態</th>
                             <th>詳細資料</th>
@@ -310,7 +349,23 @@
                                     { data: 'orderId' },
                                     { data: 'memberId' },
                                     { data: 'name' },
-                                    { data: 'returnDate' },
+                                    {
+                                        data: 'returnDate',
+                                        render: function (data, type, row, meta) {
+                                            if (type === 'display' || type === 'filter') {
+                                                var date = new Date(data);
+                                                var year = date.getFullYear().toString(); // 年份
+                                                var month = (date.getMonth() + 1).toString().padStart(2, '0'); // 月份並補0
+                                                var day = date.getDate().toString().padStart(2, '0'); // 日期並補0
+                                                var hours = date.getHours().toString().padStart(2, '0'); // 小時並補0
+                                                var minutes = date.getMinutes().toString().padStart(2, '0'); // 分鐘並補0
+                                                var seconds = date.getSeconds().toString().padStart(2, '0'); // 秒鐘並補0
+
+                                                return `${year}-${month}-${day} <span class="time-colored-text">${hours}:${minutes}:${seconds}</span>`;
+                                            }
+                                            return data;
+                                        }
+                                    },
                                     { data: 'returnReason' },
                                     { data: 'statusName' },
                                     {
@@ -559,6 +614,152 @@
                                     }
                                 });
                             })
+
+
+
+
+                            //=======================新增原因方法
+                            function setupReasonTable(data) {
+                                console.log(data);
+                                var htmlToInsert = ''; // 用於存儲要插入的HTML字符串
+
+                                // 遍歷data數組中的每個對象
+                                $.each(data.data.serviceCase, function (index, reason) {
+                                    htmlToInsert += `
+                                <tr>
+                                    <td>${reason.returnReasonId}</td>
+                                    <td>${reason.returnReason}</td>
+                                </tr>
+                            `;
+                                });
+
+                                // 將HTML字符串添加到目標元素
+                                $('#appendReason').html(htmlToInsert);
+
+                                let maxId = data.data.serviceCase.length;
+
+                                // 找到最後一個元素並添加加號圖標
+                                let lastElement = data.data.serviceCase[data.data.serviceCase.length - 1];
+                                if (lastElement) {
+                                    $('#appendReason tr:last-child td:last-child').append('<i class="fas fa-plus ms-2"></i>');
+                                }
+                            }
+
+                            let maxId; //最大ID
+
+                            //================按下新增原因按鈕事件
+                            $('#createReason').click(function () {
+                                $.ajax({
+                                    url: '@Url.Action("ReasonList", "Return")',
+                                    type: 'GET',
+                                    success: function (data) {
+                                        console.log(data);
+                                        setupReasonTable(data);
+                                        maxId = data.data.serviceCase.length;
+                                    },
+                                    error: function () {
+                                        console.log("error:" + error);
+                                    }
+                                });
+                            })
+
+                            
+                            // 監聽加號圖標的點擊事件
+                            $('#appendReason').on('click', 'i.fa-plus', function () {
+                                // 增加最大ID
+                                maxId++;
+
+                                // 創建一個新的<tr>行
+                                let newRow = $('<tr></tr>');
+
+                                // 在新的<tr>行中創建新的<td>元素，顯示ID
+                                let newIdCell = $(`<td>${maxId}</td>`);
+
+                                // 創建新的<td>元素，其中包含新的<input>元素
+                                let newInputCell = $('<td><input type="text" class="newadd" /><i class="fas fa-minus-circle"></i></td>');
+
+                                // 將新的<td>元素添加到新的<tr>行中
+                                newRow.append(newIdCell);
+                                newRow.append(newInputCell);
+
+                                // 在最後一行的後面插入新的<tr>行
+                                $('#appendReason tr:last-child').after(newRow);
+
+                            });
+
+                           
+
+                            // 監聽刪除圖標的點擊事件
+                            $('#appendReason').on('click', 'i.fa-minus-circle', function () {
+                                // 找到被點擊圖標所在的<tr>行
+                                let deletedRow = $(this).closest('tr');
+
+                                deletedRow.remove();
+                                recalculateMaxId();
+                            });
+
+                            // 重新計算maxId
+                            function recalculateMaxId() {
+                                let idCells = $('#appendReason td:first-child');
+                                maxId = 0;
+
+                                idCells.each(function () {
+                                    let idValue = parseInt($(this).text(), 10);
+                                    if (!isNaN(idValue) && idValue > maxId) {
+                                        maxId = idValue;
+                                    }
+                                });
+                            }
+
+                            //=================新增原因按下「儲存」的事件
+                            $('#CreatReturnReason').click(function () {
+                                
+
+                                var reasons = []; //[{},{},{}]
+                                $('input[type="text"].newadd').each(function () {
+                                    var id = "null";
+                                    reasons.push({ ReturnReasonId: id, ReturnReason: $(this).val() });
+                                });
+
+                                console.log(reasons);
+
+
+                                try {
+                                    $.ajax({
+                                        url: '/AdminCMS/Return/AddReturnReason',
+                                        type: 'POST',
+                                        data: { reasons: reasons },
+                                        success: function (response) {
+                                            // console.log(result)
+                                            if (response.success) {
+                                                Swal.fire({
+                                                    icon: 'success',
+                                                    title: '新增成功',
+                                                    text: response.message
+                                                });
+
+                                                // 關閉modal
+                                                $('#editStatusModalToggle').modal('hide');
+                                            } else {
+                                                Swal.fire({
+                                                    icon: 'error',
+                                                    title: '錯誤',
+                                                    text: response.message
+                                                });
+                                            }
+                                        },
+                                        error: function (xhr, status, error) {
+                                            Swal.fire({
+                                                icon: 'error',
+                                                title: '錯誤',
+                                                text: "An error occurred: " + xhr.responseText
+                                            });
+                                        }
+                                    });
+                                } catch (error) {
+                                    console.error('Error:', error);
+                                }
+                            });
                         });
                     </script>
                 }
