--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -59,6 +59,17 @@
         .checked {
             color: orange;
         }
+
+        .add-to-wishlist-coustom.favorited {
+            background-color: #000;
+            position: absolute;
+            cursor: pointer;
+            border: none;
+            color: #ffffff;
+            padding: 1px 10px;
+            height: 30px;
+            right: 10px;
+        }
     </style>
 }
 
@@ -210,7 +221,7 @@
                                 <a data-product-id=@item.pId class="add-to-cart-coustom">
                                     <i class="fa-solid fa-cart-plus"></i>
                                 </a>
-                                <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
+                                <a href="#" data-product-id=@item.pId class="add-to-wishlist-coustom">
                                     <i class="far fa-heart"></i>
                                 </a>
                             </div>
@@ -270,7 +281,7 @@
                                 <a href="#" data-product-id=@item.pId class="add-to-cart-coustom">
                                     <i class="fa-solid fa-cart-plus"></i>
                                 </a>
-                                <a asp-controller="Membership" asp-action="Membership" class="add-to-wishlist-coustom">
+                                <a href="#" data-product-id=@item.pId class="add-to-wishlist-coustom">
                                     <i class="far fa-heart"></i>
                                 </a>
                             </div>
@@ -407,7 +418,7 @@
                     console.log('GoToDetail:', response.message);
                 },
                 error: function (error) {
-                    console.error('Ajax Error:', error);
+                    
                 }
             });
         });
@@ -424,12 +435,12 @@
                     console.log('Added to Cart:', response.message);
                 },
                 error: function (error) {
-                    console.error('Ajax Error:', error);
+                    
                 }
             });
         });
 
-        //點加入購物車獲取id
+        //加入購物車:獲取id
         productIndexNew.on('click', '.add-to-cart-coustom', function (e) {
             e.preventDefault(); // 阻止<a>標籤的點擊預設行為
             console.log(productIndexNew);
@@ -446,11 +457,10 @@
                     $('#myModal').modal('show'); // 顯示 Modal
                 },
                 error: function (error) {
-                    console.error('Ajax Error:', error);
+                    
                 }
             });
         });
-
         productIndexSale.on('click', '.add-to-cart-coustom', function (e) {
             e.preventDefault(); // 阻止<a>標籤的點擊預設行為
             console.log(productIndexSale);
@@ -464,14 +474,51 @@
                 dataType: 'json',
                 success: function (response) {
                     console.log('Added to Cart:', response.message);
-                    $('#myModal').modal('show'); // 顯示 Modal
+                    
+                },
+                error: function (error) {
+                }
+            });
+        });
+        //加入收藏:獲取id
+        productIndexNew.on('click', '.add-to-wishlist-coustom', function (e) {
+            e.preventDefault(); // 阻止<a>標籤的點擊預設行為
+            var button = $(this);
+            var productId = $(this).data('product-id');
+            console.log('Clicked Add to Cart, Product ID:', productId);
+            // 透過 Ajax 將商品 ID 傳送到後端，加入購物車
+            $.ajax({
+                url: '/ProductApi/AddToWishlist',
+                type: 'POST',
+                data: { pId: productId },
+                dataType: 'json',
+                success: function (response) {
+                    button.addClass("favorited");
                 },
                 error: function (error) {
                     console.error('Ajax Error:', error);
                 }
             });
         });
-
+        productIndexSale.on('click', '.add-to-wishlist-coustom', function (e) {
+            e.preventDefault(); // 阻止<a>標籤的點擊預設行為
+            console.log(productIndexSale);
+            var button = $(this);
+            var productId = $(this).data('product-id');
+            console.log('Clicked Add to Cart, Product ID:', productId);
+            // 透過 Ajax 將商品 ID 傳送到後端，加入購物車
+            $.ajax({
+                url: '/ProductApi/AddToWishlist',
+                type: 'POST',
+                data: { pId: productId },
+                dataType: 'json',
+                success: function (response) {
+                    button.addClass("favorited");
+                },
+                error: function (error) {
+                }
+            });
+        });
 
         //評論區
 
