--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Product/Product.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/Product/Product.cshtml
@@ -299,7 +299,7 @@
                             <label>商品描述</label>
                             <textarea id="editor-description" class="form-control" name="ProductDescription"></textarea>
                         </div>
-                        <div class="col-md-12" id="editor-img">
+                        <div class="col-md-12 d-flex flex-column" id="editor-img">
                         </div>
                         <button type="submit" class="mt-3 btn btn-primary btn-block" name="submitButton-edior" id="submitButton-edior"
                                 style="width: 100%;">
@@ -334,6 +334,11 @@
 
             $(document).on("change", "#image", function () {
                 var files = $(this)[0].files;
+                if (files.length > 3) {
+                    alert("您只能上傳最多3張圖片");
+                    this.value = "";
+                    return
+                }
                 var preview = $("#preview");
                 preview.empty(); 
 
@@ -350,7 +355,6 @@
                     preview.append(img);
                 }
             });
-
 
             //初始化表格==================================================
             $(document).ready(function () {
@@ -477,12 +481,12 @@
                             $('#editor-weight').val(response.data.weight);
                             $("#editor-discount").val(response.data.discount);
                             $('#editor-supplier').val(response.data.supplier.companyName);
-                            $('#editor-discontinued').prop(response.data.discontinued);
+                            $('#editor-discontinued').prop("checked",response.data.discontinued);
                             $('#editor-image').val(response.data.shopproductImagetable);
                             $('#editor-pinToShop').prop("checked", response.data.pushToShop)
                             $('#editor-offdate').val(response.data.offDay)
                             $.each(response.data.shopProductImageTable, function (index, value) {
-                                var img = $('<img class="img-thumbnail">').attr('src', value.productPhoto);
+                                var img = $('<img class="img-thumbnail previewable-image">').attr('src', value.productPhoto).attr('data-image-id', value.productImageId);
                                 var spanImgID = $('<h6>').text(`圖片編號：${value.productImageId}`);
                                 var frontCover = $(`<input type="checkbox" class="frontCoverCheckbox" data-product-image-id="${value.productImageId}">`).prop("checked", value.frontCover);
                                 var selectID = $('<option>').val(value.productImageId).text(value.productImageId);
@@ -501,10 +505,26 @@
             $("#editor-image").on("change", function () {
                 var files = this.files;
 
-                if (files.length > 3) {
-                    alert("您只能上傳最多3張圖片");
+                if (files.length > 1) {
+                    alert("您只能上傳最多1張圖片");
                     this.value = "";
                 }
+
+                    const selectedImageId = $("#editor-imgID").val();  
+                    const imgToUpdate = $(`.previewable-image[data-image-id="${selectedImageId}"]`); 
+
+                    if (files.length > 0) {
+                        const file = files[0];
+                        if (file && file.type.startsWith('image/')) {
+                            const reader = new FileReader();
+                            reader.onload = function (e) {
+                                imgToUpdate.attr('src', e.target.result);
+                            };
+                            reader.readAsDataURL(file);
+                        } else {
+                            alert('請選擇圖片');
+                        }
+                    }
             });
             let TypeEditor;
             $('#editor-category').on('change', function () {
@@ -572,7 +592,7 @@
                     processData: false,
                     contentType: false,
                     success: function (response) {
-                        alert("Content saved successfully!");
+                        alert("儲存成功!");
                         window.location.reload();
                     }
                 });
@@ -616,7 +636,7 @@
                     processData: false,
                     contentType: false,
                     success: function (response) {
-                        alert("Content saved successfully!");
+                        alert("儲存成功!");
                         window.location.reload();
                     }
                 })
